# kaggle-skill

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/skills/: kaggle
skills/kaggle/: SKILL.md
skills/kaggle/modules/badge-collector/scripts/: badge_registry.py  badge_tracker.py  phase_2_competition.py  phase_4_browser.py  phase_5_streaks.py
skills/kaggle/modules/comp-report/: README.md
skills/kaggle/modules/kllm/: README.md
skills/kaggle/modules/kllm/references/: kaggle-knowledge.md  mcp-reference.md
skills/kaggle/modules/kllm/scripts/: cli_download.sh  kagglehub_download.py
skills/kaggle/modules/registration/references/: kaggle-setup.md
tests/: test_badge_collector.py  test_kllm.sh  test_mcp.py
