[project]
name = "kaggle-skill"
version = "1.0.0"
description = "Unified Kaggle skill for any LLM/agentic system — account setup, competition reports, datasets, models, notebooks, badges"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "kagglehub>=0.3",
    "kaggle>=1.6",
    "python-dotenv>=1.0",
    "requests>=2.28",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.40",
]
dev = [
    "ruff>=0.8",
    "pytest>=8.0",
    "detect-secrets>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
